<resources>
    <string name="app_name">CoffeeAlarm</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="urlSite">http://192.168.1.206:8083</string>
    <string name="urlCoffee">http://192.168.1.206:8083/?a=1</string>
    <string name="urlLightOn">http://192.168.1.206:8083/?a=2</string>
    <string name="urlLightOff">http://192.168.1.206:8083/?a=3</string>
    <string name="urlAction">https://www.marktguru.at/b/red-bull</string>
    <string name="alarmSetAtDate">Alarm set at %d:%d, %d:%d:%d</string>
    <string name="alarmSetAt">Alarm set at %d:%d</string>
    <string name="alarmSetAt24">Alarm set at %d:%d, 24 hour interval</string>
    <string name="interval">24 hour interval</string>
    <string name="cancelAlarm">Cancel alarm</string>
    <string name="alarmCancelled">Alarm cancelled</string>
    <string name="getCoffee">Coffee!</string>
    <string name="noAlarm">No Alarm set!</string>
    <string name="lightControl">Light Control</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="lightOff">Light Off</string>
    <string name="lightON">Light On</string>
    <string name="coffee">Coffee</string>
    <string name="alarm">Alarm</string>
    <string name="data">Data</string>
    <string name="light">Light</string>
    <string name="alert">Alert</string>
    <string name="temp">%.2f °C</string>
    <string name="humidity">%.2f %%</string>
    <string name="battery">Battery voltage: </string>
    <string name="voltage">%.2f V</string>
    <string name="iconURL" translatable="false">https://openweathermap.org/themes/openweathermap/assets/vendor/owm/img/widgets/%1$s.png</string>
    <string name="jsonURL" translatable="false">http://api.openweathermap.org/data/2.5/weather?appid=%1$s&amp;q=%2$s</string>
    <string name="linz" translatable="false">linz</string>
    <string name="room">Room</string>
    <string name="outside">Outside</string>
    <string name="fileName">action%d</string>
    <string name="fileNameWAL">action%d-wal</string>
    <string name="fileNameSHM">action%d-shm</string>
    <string name="listString">%.2f, %s, %s, %s, %s, %s</string>
    <string name="uploadDB">Upload database</string>
    <string name="finished">Upload finished</string>
    <string name="failed">Upload failed</string>
    <string name="alreadyUploaded">Already uploaded today</string>
</resources>
